--- a/HW1_HTML_CSS/styles.css
+++ b/HW1_HTML_CSS/styles.css
@@ -25,44 +25,17 @@
             border: 1px solid #000;
         }
 
-        h2 {
+        .headerStyle {
             font-size: max(15px, 25px);
             text-align: center;
             font-family: "Times New Roman", serif;
             margin-bottom: 8px;
         }
 
-        h3 {
-            font-size: max(15px, 25px);
-            text-align: center;
-            font-family: "Times New Roman", serif;
-            margin-bottom: 8px;
-        }
-
-        h4 {
-            font-size: max(15px, 25px);
-            text-align: center;
-            font-family: "Times New Roman", serif;
-            margin-bottom: auto 0;
-            padding: 24px 16px;
-        }
-
-        #indexP1 {
+        .paragraphStyle {
             text-align: center;
             font-family: "Times New Roman", serif;
             font-size: max(10px, 20px);
-        }
-
-        #indexP2 {
-            text-align: center;
-            font-family: "Times New Roman", serif;
-            font-size: max(10px, 20px);
-        }
-
-        #indexP3 {
-            text-align: center;
-            font-family: "Times New Roman", serif;
-            font-size: max(10px, 15px);
         }
 
         .firstContent {
@@ -78,7 +51,7 @@
             max-width: 250px;
             height: auto;
             border-radius: 16px;
-            box-shadow: 0 6px 18px rgba(0,0,0,.12);
+            box-shadow: 0 6px 18px rgba(0,0,0,.12); 
         }
 
         .footer{
@@ -86,5 +59,22 @@
             padding: 24px 16px;
         }
 
+        .image-row {
+            border-radius: 16px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0;
+        }
+
+        .image-row img {
+            width: 200px; 
+            height: auto;
+        }
+
+        .listStyle {
+            font-family: "Times New Roman", serif;
+            font-size: max(10px, 20px);
+        }
 
         
