--- a/HW1_HTML_CSS/styles.css
+++ b/HW1_HTML_CSS/styles.css
@@ -30,18 +30,21 @@
             text-align: center;
             font-family: "Times New Roman", serif;
             margin-bottom: 8px;
+            font-weight: bold;
         }
 
         .paragraphStyle {
             text-align: center;
             font-family: "Times New Roman", serif;
             font-size: max(10px, 20px);
+            line-height: 1.5;
+            color: rgb(54, 5, 5);
         }
 
         .firstContent {
             align-items: center;
             gap: 20px;
-            max-width: 900x;
+            max-width: 900px;
             margin: 0 auto;
         }
 
