--- a/HW2_JavaScript/styles.css
+++ b/HW2_JavaScript/styles.css
@@ -12,3 +12,23 @@ h1 {
     margin-bottom: 5px;
 }
 
+#statusText {
+  color: rgb(0, 0, 0);
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+#hangmanPic {
+    width: 200px;
+    height: auto;
+    margin: 15px;
+    border: 2px solid black;
+}
+
+button {
+    font-size: 16px;
+    padding: 5px 10px;
+    margin: 5px;
+    border: 1px solid black;
+    cursor: pointer;
+}
