--- a/lab3/style.css
+++ b/lab3/style.css
@@ -1,3 +1,43 @@
+body {
+    font-family: 'Times New Roman', Times, serif;
+    margin: 20px;
+    line-height: 1.5;
+    background: #6e6b6b;
+    text-align: center;
+}
+
+h1{
+    margin-bottom: 6px;
+    
+}
+
+h2{
+    margin-bottom: 6px;
+}
+
+.feedback{
+    margin-top: 6px;
+    padding: 8px;
+    border: 1px solid black;
+}
+
+button{
+    padding: 10px 14px;
+    border-radius: 8px;
+    border: none;
+    background: #333;
+    color: white;
+    cursor: pointer;
+}
+
+#attempts{
+    display: inline-block;
+    padding: 8px 10px;
+    margin-right: 8px;
+    border-radius: 10px;
+
+}
+
 .correct {
     color: #0066cc;   /* blue */
 }
